# YiCe

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: yice-phase-2-data-sources.md  yice-phase-3-agent-development.md  yice-phase-4-frontend.md  yice-phase-5-integration-release.md  yice-project-planning.md
.sisyphus/plans/: yice-phase-1-project-scaffold.md  yice-phase-2-data-sources.md  yice-phase-3-agent-development.md  yice-phase-4-frontend.md  yice-phase-5-integration-release.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  data.py
backend/app/core/: __init__.py  cache.py  cache_strategy.py  config.py  exceptions.py  file_cache.py  redis_client.py
backend/app/core/providers/: __init__.py  base.py  factory.py  tushare_provider.py
backend/app/models/: data_models.py
backend/app/services/: custom_indicator.py  fundamental_service.py  indicator_service.py  kline_service.py  macro_service.py
backend/app/utils/: __init__.py  data_converter.py
backend/app/workflows/: __init__.py  base.py
backend/tests/: conftest.py  test_data.py  test_health.py  test_indicators.py
docs/: api_usage.md  architecture.md  data_layer_architecture.md  indicators_list.md  quickstart.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.vitest.json
frontend/src/stores/: app.ts  index.ts
frontend/src/views/: HomeView.vue
