[project]
name = "yice-backend"
version = "0.1.0"
description = "YiCe Backend - AI-Powered Code Review Assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph==1.1.6",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.32.0",
    "tushare>=1.4.0",
    "tenacity>=8.0.0",
    "pandas>=2.0.0",
    "pandas-ta-classic>=0.3.14",
    "redis>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
]
